// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gel-wrap() adds box-sizing properties when box-sizing is enabled 1`] = `
".gel-wrap {
  box-sizing: border-box;
  margin: 0 auto;
  max-width: 1008px;
  padding-right: 8px;
  padding-left: 8px;
}
@media (min-width: 25em) {
  .gel-wrap {
    padding-left: 16px;
    padding-right: 16px;
  }
}"
`;

exports[`gel-wrap() increases to a 1280px width when the 1280 breakpoint is enabled 1`] = `
".gel-wrap {
  margin: 0 auto;
  max-width: 1008px;
  padding-right: 8px;
  padding-left: 8px;
}
@media (min-width: 25em) {
  .gel-wrap {
    padding-left: 16px;
    padding-right: 16px;
  }
}
@media (min-width: 80em) {
  .gel-wrap {
    max-width: 1280px;
  }
}"
`;

exports[`gel-wrap() supports a 1008px width by default 1`] = `
".gel-wrap {
  margin: 0 auto;
  max-width: 1008px;
  padding-right: 8px;
  padding-left: 8px;
}
@media (min-width: 25em) {
  .gel-wrap {
    padding-left: 16px;
    padding-right: 16px;
  }
}"
`;
